Add JavaFX interface, drag-and-drop, zoom, data extraction, and updated README